@@ -105,6 +105,7 @@ enum {
   PROP_DND_SELECTION,
   PROP_EWMH_ICON,
   PROP_EWMH_OPACITY,
+  PROP_EWMH_STARTUP_ID,
   NUM_PROPS
 };
 
